--- a/mie/doc/simul.bib
+++ b/mie/doc/simul.bib
@@ -3013,7 +3013,21 @@
   doi = {10.1063/1.1749657}
 }
 
-@Article{mcgill1954,
+@article{born1946,
+ author = {M. Born and H. S. Green},
+ title = {A General Kinetic Theory of Liquids. I. The Molecular Distribution Functions},
+ journal = {Proceedings of the Royal Society of London. Series A, Mathematical and Physical Sciences},
+ number = {1012},
+ pages = {10-18},
+ publisher = {The Royal Society},
+ volume = {188},
+ year = {1946},
+ abstract = {This paper outlines a general theory whose object is to provide a basis from which all the equilibrium and dynamical properties of liquids can be investigated. A set of multiform distribution functions is defined, and the generalized continuity equations satisfied by these functions are derived. By introducing the equations of motion, a set of relations is obtained from which the distribution functions may be determined. It is shown that Boltzmann's equation in the kinetic theory of gases follows as a particular case, and that, in equilibrium conditions, the theory gives results consistent with statistical mechanics. An integral equation for the radial distribution function is obtained which is the natural generalization of one obtained by Kirkwood for 'rigid spherical molecules'. Finally, it is indicated how the theory may be applied to solve both equilibrium and dynamical problems of the liquid state.},
+ ISSN = {00804630},
+ URL = {http://www.jstor.org/stable/97937}
+}
+
+@article{mcgill1954,
   author="McGill, William J.",
   title="Multivariate information transmission",
   journal="Psychometrika",
